<resources>
    <string name="app_name">Instadog</string>
    <string name="title_activity_signup">Cadastrar</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_new_post">Novo post</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Sair</string>
    <string name="action_post">Postar</string>
    <string name="login_etLogin">Usuário</string>
    <string name="login_etPassword">Senha</string>
    <string name="login_btLogin">Entrar</string>
    <string name="login_btSignup">Não possui uma conta? Cadastre-se!</string>
    <string name="signup_etLogin">Usuário</string>
    <string name="signup_etEmail">E-mail</string>
    <string name="signup_etPassword">Senha</string>
    <string name="signup_etRepeatPassword">Repetir senha</string>
    <string name="signup_btSignup">Cadastrar</string>
    <string name="pref_header_profile">Perfil</string>
    <string name="pref_header_notifications">Notificações</string>
    <string name="pref_title_photo_upload">Atualizar foto</string>
    <string name="pref_title_name">Nome</string>
    <string name="pref_title_email">E-mail</string>
    <string name="pref_title_password">Nova senha</string>
    <string name="pref_title_repeat_password">Repetir nova senha</string>
    <string name="pref_title_save">Salvar</string>
    <string name="pref_title_enable_notifications">Habilitar notificações</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="photo_upload_select">Selecione arquivo</string>
    <string name="new_post_description">Descrição</string>
    <string name="list_following_unfollow">Deixar de seguir</string>
    <string name="list_following_follow">Seguir</string>
</resources>
