<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <picoledelimao.github.io.instadog.PhotoPreference
        android:key="pref_photo" />

    <EditTextPreference
        android:key="pref_name"
        android:title="@string/pref_title_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="pref_email"
        android:title="@string/pref_title_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="pref_password"
        android:title="@string/pref_title_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="pref_repeat_password"
        android:title="@string/pref_title_repeat_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLines="1" />

    <picoledelimao.github.io.instadog.SavePreference
        android:key="save"
        android:layout="@layout/fragment_preference_save" />

</PreferenceScreen>
