<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_signup"
    tools:context="picoledelimao.github.io.instadog.SignupActivity"
    android:id="@+id/layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_etLogin"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1"
            style="@style/CustomEditText" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_etEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:maxLines="1"
            style="@style/CustomEditText" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_etPassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            style="@style/CustomEditText" />

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_etRepeatPassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            style="@style/CustomEditText" />

        <Button
            android:id="@+id/btSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_btSignup"
            style="@style/PrimaryButton" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#64000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleLarge"></ProgressBar>

    </RelativeLayout>

</FrameLayout>